# EvilSnake

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Game.cpp.A24563F4FB0ADB65.idx  Game.h.0FA5BAEFC4D96E6C.idx  Position.h.860774BB84B730D8.idx  Snake.cpp.564E02997CB71103.idx  Snake.h.891181B08A092A21.idx  Utils.cpp.7A8EE3ED67959EFE.idx  Utils.h.1E513EFF24CF2158.idx  main.cpp.76D3681DD664BE12.idx
assets/textures/: EvilSnake.icns
include/: Constants.h  FontManager.h  Game.h  GameMode.h  GameState.h  GameUtils.h  ScreenManager.h  Snake.h  SoundManager.h  TextUtils.h  Utils.h  constants.h  font_manager.h  game.h  game_utils.h  screen_manager.h  sound_manager.h  text_utils.h
platform/macos/: AppIcon.icns  Info.plist  entitlements.plist
src/: FontManager.cpp  Game.cpp  GameUtils.cpp  ScreenManager.cpp  Snake.cpp  SoundManager.cpp  TextUtils.cpp  Utils.cpp  font_manager.cpp  game.cpp  game_utils.cpp  main.cpp  screen_manager.cpp  snake.cpp  sound_manager.cpp  text_utils.cpp
